--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "devDependencies": {
     "eslint": "^5.13.0",
-    "eslint-config-htmlacademy": "^0.5.2"
+    "eslint-config-htmlacademy": "^0.5.2",
+    "stylelint-config-htmlacademy": "^0.1.4"
   },
   "engines": {
     "node": "10"
@@ -21,6 +22,9 @@
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.1.0",
     "eslint-plugin-react": "^7.21.2",
+    "prop-types": "^15.7.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.10.3"
