--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "@babel/core": "7.8.7",
     "@babel/preset-env": "7.8.7",
-    "@babel/preset-react": "^7.8.3",
+    "@babel/preset-react": "7.8.3",
     "@types/jest": "25.1.5",
     "@types/react": "16.9.51",
     "axios": "0.19.2",
